import and setup libraries

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Welcome to this sample app:</h1><h2>{{ auth.getCurrentUserName() }}</h2>
 <p>The button below is just a simple API Gateway Test.<br/></p>
-<button pButton type="button" label="API Test" (click)="helloWorld()" ></button>
+
+<chart [type]="type" [data]="data" [options]="options"></chart>
